--- a/Barak_main_page.css
+++ b/Barak_main_page.css
@@ -53,7 +53,7 @@ body
 {
 	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 	color: #E4CF00;
-	font-size: 22px;
+	font-size: 24px;
 	text-align: center;
 	font-weight: bold;
 }
@@ -76,7 +76,7 @@ body
 {
 	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 	color: #AB0000;
-	font-size: 22px;
+	font-size: 24px;
 	text-align: center;
 	font-weight: bold;
 }
@@ -104,4 +104,27 @@ body
   	text-align: center;
   	font-size: 25px;
   	border-radius: 12px;
+}
+
+#water_title
+{
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+	color: #001DD6;
+	font-size: 24px;
+	text-align: center;
+	font-weight: bold;
+}
+
+#water_question
+{
+	color: #001DD6;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+#water_answer
+{
+	color: #001DD6;
+	font-size: 20px;
+	font-weight: bold;
 }
